fix timeline banners blur filter not working on Safari

--- a/src/styles/_timeline.scss
+++ b/src/styles/_timeline.scss
@@ -11,3 +11,9 @@
 		line-height: 1.25rem;
 	}
 }
+.vertical-timeline-element-content {
+	box-shadow: 0px 0px 10px 2px rgba(255, 255, 255, 0.2) !important;
+	background-color: rgba(255, 255, 255, 0.15) !important;
+	-webkit-backdrop-filter: blur(3px) !important;
+	backdrop-filter: blur(3px) !important;
+}
